--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:vercel": "pnpm install && next build",
+    "build:debug": "NEXT_DEBUG=1 next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type-check": "tsc --noEmit",
+    "clean": "rm -rf .next && rm -rf node_modules/.cache"
   },
   "prisma": {
     "seed": "tsx --require dotenv/config scripts/seed.ts"
